[tool.poetry]
name = "quart-db"
version = "0.8.2"
description = "Quart-DB is a Quart extension that provides managed connection(s) to database(s)."
authors = ["pgjones <philip.graham.jones@googlemail.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["src/quart_db/py.typed"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/pgjones/quart-db/"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "quart_db, tests"
line_length = 100
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false
reverse_relative = true

[tool.mypy]
allow_redefinition = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module =["aiosqlite.*", "asyncpg.*", "buildpg.*"]
ignore_missing_imports = true

[tool.poetry.dependencies]
aiosqlite = ">=0.17.0"
asyncpg = ">=0.25.0"
buildpg = ">=0.4"
eralchemy2 = { version = ">=1.3.2", optional = true }
psycopg2 = { version = ">=2.9.3", optional = true }
pydata_sphinx_theme = { version = "*", optional = true }
python = ">=3.8"
quart = ">=0.16.3"
typing_extensions = { version = "*", python = "<3.11" }

[tool.poetry.dev-dependencies]
tox = "*"

[tool.poetry.extras]
sqlite = ["aiosqlite"]
docs = ["pydata_sphinx_theme"]
erdiagram = ["eralchemy2", "psycopg2"]

[tool.pytest.ini_options]
addopts = "--no-cov-on-fail --showlocals --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
